--- a/frontend/src/components/CustomDialog.module.css
+++ b/frontend/src/components/CustomDialog.module.css
@@ -12,6 +12,7 @@
 
 .dialog {
   background-color: #fff;
+  border-top: 3px solid #ff0000;
   border-radius: 8px;
   padding: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -20,13 +21,14 @@
 
 .header {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 16px;
 }
 
 .header h2 {
-  margin: 0;
+  margin-top: 20px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -58,4 +60,13 @@
 .cancelButton:hover,
 .deleteButton:hover {
   opacity: 0.8;
+}
+
+.icon {
+  font-size: 30px;
+  padding: 0.5rem;
+	cursor: pointer;
+  color: #fff;
+  background-color: #ff0000;
+  border-radius: 100%;
 }
