--- a/frontend/src/components/ProductDeleteButton.module.css
+++ b/frontend/src/components/ProductDeleteButton.module.css
@@ -13,3 +13,9 @@
   border: none;
   background-color: transparent;
 }
+
+@media screen and (max-width: 768px) {
+  .icon {
+    font-size: 20px;
+  }
+}
