--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -28,9 +28,12 @@
 }
 
 .form {
+  border: 2px solid #d2d2d2;
+  border-radius: 6px;
   width: 90%;
   max-width: 40rem;
-  margin: 2rem auto;
+  margin: 1rem auto;
+  padding: 2rem;
 }
 
 .form-control {
@@ -39,8 +42,8 @@
 
 .label,
 .input {
-  display: block;
-  width: 100%;
+  display: flex;
+  width: 80%;
   color: #333;
 }
 
@@ -49,17 +52,25 @@
   font-size: 0.9em;
 }
 
+.inputGroup {
+  text-align: center;
+  text-align: -webkit-center;
+}
+
 .input {
   border: 1px solid #d2d2d2;
   border-radius: 6px;
   padding: 0.5rem;
   margin-bottom: 0.25rem;
+  max-width: 40rem;
   font: inherit;
   background-color: #f7f7f7;
 }
 
 .input:focus {
   outline: none;
+  border-color: #27acd9;
+  box-shadow: 0 0 10px 0 #27acd9;
 }
 
 .input::placeholder {
@@ -81,12 +92,35 @@
   border-radius: 100%;
 }
 
+.productIcon {
+  font-size: 24px;
+  padding: 0.5rem;
+}
+
+.iconDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.iconP {
+  margin: 0;
+  padding: 0 0.6rem 0 0.6rem;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: none;
+  border-radius: 3px;
+}
+
+.icon-container {
+  position: relative;
+}
+
 .ul {
   list-style: none;
   margin: 2rem auto;
   padding: 0;
   width: 90%;
-  max-width: 40rem;
 }
 
 .li {
@@ -94,7 +128,60 @@
   justify-content: space-between;
   align-items: center;
   margin: 1rem 0;
-  padding: 0.5rem;
+  padding: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 6px;
+}
+
+@media screen and (max-width: 768px) {
+  .form {
+    border: 2px solid #d2d2d2;
+    border-radius: 6px;
+    width: 70%;
+    max-width: 40rem;
+    margin: 1rem auto;
+    padding: 2rem;
+  }
+
+  .ul {
+    list-style: none;
+    margin: 2rem auto;
+    padding: 0;
+    width: 90%;
+    max-width: 40rem;
+  }
+
+  .li {
+    font-size: 13px;
+    padding: 0 0.25rem;
+  }
+
+  .icon,
+  .productIcon {
+    font-size: 20px;
+  }
+
+  .iconDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .iconP {
+    margin: 0;
+    padding: 0 0.6rem;
+    font-size: 9px;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: none;
+    border-radius: 3px;
+  }
+
+  .iconHolder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
