--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -6,7 +6,7 @@
   position: relative;
   padding: 0.5rem 0rem;
   background-color: #fff;
-  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
+  box-shadow: 0 1px 1px 1px rgba(9, 9, 9, 0.23);
 }
 
 .navLogo {
@@ -68,11 +68,28 @@
 }
 
 @media screen and (max-width: 768px) {
-  .ul {
-    justify-content: flex-end;
-    text-align: center;
-    width: 90%;
-    height: auto;
-    list-style: none;
+  .navLink {
+    height: 45px;
+  }
+  
+  .navLogo {
+    margin-left: 1rem;
+    font-size: 0.65rem;
+  }
+  
+  .navBrand {
+    font-size: 1.8rem;
+  }
+
+  .liDiv {
+    padding: 1rem 1rem 0.6rem 1rem;
+  }
+  
+  .liP {
+    font-size: 0.45rem;
+  }
+  
+  .icon {
+    font-size: 1.45rem;
   }
 }
