--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -93,9 +93,13 @@
   border-radius: 100%;
 }
 
-.productIcon {
+.tableIcon {
   font-size: 24px;
   padding: 0.5rem;
+}
+
+.tableCellIcon {
+  font-size: 24px;
 }
 
 .iconDiv {
@@ -144,25 +148,14 @@
     padding: 2rem;
   }
 
-  .ul {
-    list-style: none;
-    margin: 2rem auto;
-    padding: 0;
-    width: 90%;
-    max-width: 40rem;
-  }
-
-  .li {
-    font-size: 13px;
-    padding: 0 0.25rem;
-  }
-
   .icon,
-  .productIcon {
-    font-size: 20px;
+  .tableIcon,
+  .tableCellIcon {
+    font-size: 15px;
   }
 
-  .iconDiv {
+  .iconDiv,
+  .iconHolder {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -177,12 +170,5 @@
     background-color: rgba(0, 0, 0, 0.1);
     border: none;
     border-radius: 3px;
-  }
-
-  .iconHolder {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 }
