--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -27,6 +27,7 @@
 .ul {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   text-align: right;
   width: 90%;
   height: auto;
@@ -51,6 +52,10 @@
   flex-direction: column;
   align-items: center;
   padding: 1.25rem;
+}
+
+.shoppingCartDiv {
+  padding:  1rem 1rem 1.25rem 1rem;
 }
 
 .liP {
@@ -82,7 +87,11 @@
   }
 
   .liDiv {
-    padding: 1rem 1rem 0.6rem 1rem;
+    padding: 0.75rem;
+  }
+
+  .shoppingCartDiv {
+    padding: 0.75rem 0.75rem 1rem 0.75rem;
   }
   
   .liP {
