--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -21,7 +21,7 @@
 }
 
 .icon {
-  padding: 0.5rem;
+  padding: .5rem;
 }
 
 .icon:hover {
@@ -31,21 +31,22 @@
 
 .tableIcon {
   font-weight: bold;
-  padding: 0.5rem;
+  padding: 0;
 }
 
 .cartIcon {
   color: #000;
+  padding: 0;
 }
 
 @media screen and (max-width: 768px) {
   .icon,
   .cartIcon {
-    font-size: 15px;
+    font-size: 20px;
   }
 
   .tableIcon {
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
   }
 }
