--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -7,6 +7,7 @@
   cursor: pointer;
   border: none;
   background-color: transparent;
+  font-size: 24px;
 }
 
 .a {
@@ -25,7 +26,8 @@
 }
 
 @media screen and (max-width: 768px) {
-  .icon {
+  .icon,
+  .button {
     font-size: 1rem;
     padding: 6px;
   }
