初回ログイン時のモーダル表示

--- a/htdocs/resources/css/app.css
+++ b/htdocs/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.primary-link-btn {
+    @apply inline-flex items-center justify-center px-4 py-2 bg-blue-600 dark:bg-blue-200 border border-transparent rounded-md font-semibold text-base text-white dark:text-blue-500 hover:bg-white hover:text-blue-500 hover:border-blue-500 dark:hover:bg-white focus:bg-blue-700 dark:focus:bg-white active:bg-blue-800 dark:active:bg-blue-300 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-blue-800 transition ease-in-out duration-150;
+}
+.secondary-link-btn {
+    @apply inline-flex items-center justify-center px-4 py-2 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-500 rounded-md font-semibold text-base text-gray-700 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800 disabled:opacity-25 transition ease-in-out duration-150;
+}
